--- a/documentation/pages/functional-spec.adoc
+++ b/documentation/pages/functional-spec.adoc
@@ -90,7 +90,7 @@ Clear and informative error messages are displayed to help the user resolve enco
 
 
 
-image::https://github.com/Louispeka/Terraform-update-analysis/blob/main/documentation/images/tuap.png[]
+image::/images/tuap.png[]
 
 == Stakeholders
 
